Fix custom lobby menu not showing

--- a/TDS_Client/Window/mainNew/src/app/components/lobbychoice/custom-lobby/custom-lobby.component.scss
+++ b/TDS_Client/Window/mainNew/src/app/components/lobbychoice/custom-lobby/custom-lobby.component.scss
@@ -56,6 +56,10 @@
   height: auto;
   width: 20vw;
 
+  .mat-expansion-panel  {
+    background-color: transparent;
+  }
+
   #settings-expansion-panel-container {
     max-height: 90vh;
     overflow-y: auto;
